--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,8 @@
 @import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 
 html {
     background-color: #101828; /* dark bg */
